# summon-demo

./: CHANGELOG.md  LICENSE  README.md  summon-demo.cabal
app/: Main.hs
src/: SummonDemo.hs
